tests/negative/typecheck/continue.orng
// continue.orng:6:13: error: `continue` is not inside a loop
//     continue
//            ^
// 
fn main() -> Int {
    continue
}